--- a/intro.html
+++ b/intro.html
@@ -149,8 +149,8 @@
         <td class="left">30m fun</td>
         <td>listen to/read/watch spanish media, write texts
           <div class="detail">
-            In order to learn a foreign language, you need to be exposed to it as much as possible. Ideally, you live in a country where people speak the language you want to learn or you have a partner/friends who you speak the language with on a daily basis. Aternatively, you need to create this environment yourself by consuming media and actively meeting up with native speakers.<br><br>
-            The key to enjoy foreign language media is finding the right content. It should obviously match your current skill level but moreover, you should only listen to/read/watch stuff that <b>really interests you</b>. A good measure is to always ask yourself wether you would read this book or watch this movie in your mother language.<br><br>
+            In order to learn a foreign language, you need to be exposed to it as much as possible. Ideally, you live in a country where people speak the language you want to learn or you have a partner/friends who you speak the language with on a daily basis. Alternatively, you need to create this environment yourself by consuming media and actively meeting up with native speakers.<br><br>
+            The key to enjoy foreign language media is to find the right content. It should obviously match your current skill level but moreover, you should only listen to/read/watch stuff that <b>really interests you</b>. A good measure is to always ask yourself wether you would read this book or watch this movie in your mother language.<br><br>
             My favorite spanish podcast at the moment is <a href="http://notesinspanish.com">Notes in Spanish</a> which offers contents for different levels.
           </div>
         </td>
@@ -285,7 +285,7 @@
     Flowra isn't about quick productivity hacks that will make your life better in ten easy steps. Nor does it aim to become a learning platform for programming, guitar playing or speaking foreign languages. Its intention is rather to help you prepare yourself for learning and enjoying these activities.
   </p>
   
-  <div class="facebook clearfix">  
+  <div style="display:none;" class="facebook clearfix">  
     <iframe class="left"  src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fflowra.org&amp;width=210&amp;height=85&amp;show_faces=true&amp;colorscheme=light&amp;stream=false&amp;border_color&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:210px; height:85px;" allowTransparency="true"></iframe>
   
     <h3 class="right">...stay in the loop</h3>
