Edit date format

--- a/intro.html
+++ b/intro.html
@@ -6,7 +6,7 @@
 
 <div class="body">
   <h2>Introducing Flowra</h2>
-  <h5>by Alex Wilde, Berlin, 20.12.2012</h5>
+  <h5>by Alex Wilde, Berlin, December 12, 2012</h5>
   
   <p>Among the activities in life which I enjoy the most are programming, making music, doing all kinds of sports and having conversations in a foreign language. I feel happy when I've spent quality time in these activities, so I would like to experience them on a regular basis, ideally every day.</p>
   
