Typographic nitpicks (real apostrophes, quote marks, em-dashes, ellipsis), prettier date format

--- a/intro.html
+++ b/intro.html
@@ -6,23 +6,23 @@
 
 <div class="body">
   <h2>Introducing Flowra</h2>
-  <h5>by Alex Wilde, Berlin, 20.12.2012</h5>
-  
-  <p>Among the activities in life which I enjoy the most are programming, making music, doing all kinds of sports and having conversations in a foreign language. I feel happy when I've spent quality time in these activities, so I would like to experience them on a regular basis, ideally every day.</p>
-  
-  <p>On a typical working day however, I've only got little time and energy for activities besides work and forcing myself has never worked for me. It must be fun right away to exercise, practice an instrument, speak a language or write software or it won't happen. This got me thinking, <b>how can I prepare an activity so it will be fun?</b> Here's what I've found:</p>
-  
-  <p>These activities I'm talking about are called "flow activities" (which I'm going to write more about in another post). Flow activities are characterized by requiring complex, demanding skills and the very basic requirement to enjoy any flow activity is having a <b>sufficient skill level</b>. Programming or speaking a language aren't fun if you don't have at least the basic skills. You also need to be <b>set up</b> properly to perform an activity, i.e. obtain the required equipment, tools, places, people etc.</p>
+  <h5>by Alex Wilde, Berlin, December 20, 2012</h5>
 
-  <p>The second most important prerequisite is having a <b>clear and realistic goal</b> that you can commit yourself to. For instance in programming (and likewise in any other creative activity), as long as you don't know exactly what you want to build and how you are going build it, you won't be able to enjoy the implementation. A specific goal will also help you to stay focused and motivated and allows you to create a plan with <b>concrete actions</b>.</p>
-  
+  <p>Among the activities in life which I enjoy the most are programming, making music, doing all kinds of sports and having conversations in a foreign language. I feel happy when I’ve spent quality time in these activities, so I would like to experience them on a regular basis, ideally every day.</p>
+
+  <p>On a typical working day however, I’ve only got little time and energy for activities besides work and forcing myself has never worked for me. It must be fun right away to exercise, practice an instrument, speak a language or write software or it won’t happen. This got me thinking, <b>how can I prepare an activity so it will be fun?</b> Here’s what I’ve found:</p>
+
+  <p>These activities I’m talking about are called <i>flow activities</i> (which I’m going to write more about in another post). Flow activities are characterized by requiring complex, demanding skills and the very basic requirement to enjoy any flow activity is having a <b>sufficient skill level</b>. Programming or speaking a language aren’t fun if you don’t have at least the basic skills. You also need to be <b>set up</b> properly to perform an activity, i.e. obtain the required equipment, tools, places, people etc.</p>
+
+  <p>The second most important prerequisite is having a <b>clear and realistic goal</b> that you can commit yourself to. For instance in programming (and likewise in any other creative activity), as long as you don’t know exactly what you want to build and how you are going build it, you won’t be able to enjoy the implementation. A specific goal will also help you to stay focused and motivated and allows you to create a plan with <b>concrete actions</b>.</p>
+
   <p>Any plan must take two things into account though in order to work: my time and energy are limited and the primary purpose of doing an activity is to enjoy it. So whatever I plan on doing must fit into a busy working day routine and above all, it should <b>be fun</b>.</p>
-  
+
   <p>My plan is to spend <b>30 minutes of quality time</b> in each of my current focus activities programming, singing, speaking spanish and triathlon (running, swimming, cycling) on a given working day. As a result, I would keep a healthy balance of different mental and physical activities throughout the day and make steady progress towards my goals. The crucial point here is to <b>prepare</b> these 30 minutes of quality time and remove barriers so I can get started immediately.</p>
-  
+
   <p>So much for theory.<br>
-    Here's a brief overview of how I'm applying this model to my activities:</p>
-  
+    Here’s a brief overview of how I’m applying this model to my activities:</p>
+
   <table class="table">
     <thead>
       <tr>
@@ -34,7 +34,7 @@
         <td class="left">Skill Level</td>
         <td>Expert
           <div class="detail">
-            I enjoy programming, especially writing PHP and JavaScript code. I've been building software for about 12 years now and I'm completely self-taught. Drupal has been my framework of choice for the past 6 years or so and I also make a living as <a href="http://alexo.it">freelance</a> Drupal developer.
+            I enjoy programming, especially writing PHP and JavaScript code. I’ve been building software for about 12 years now and I’m completely self-taught. Drupal has been my framework of choice for the past 6 years or so and I also make a living as <a href="http://alexo.it">freelance</a> Drupal developer.
           </div>
         </td>
       </tr>
@@ -63,9 +63,9 @@
         <td>small iterations
           <div class="detail">
             Programming is fun when you know what to build, you know how to build it and you finish early with a working result. <br>My process to prepare small iterations aims for exactly that:<br>
-            1) scope functionality so it's realistic to finish with something in less than 2 hours (that's about 4x 30m sessions)<br>
-            2) spec functionality so it's clear what exactly needs to be built and to know when you're done<br>
-            3) plan implementation so you know how to build it (optionally learn the skills you're missing yet, e.g. how to use an API, a library etc.)<br>
+            1) scope functionality so it’s realistic to finish with something in less than 2 hours (that’s about 4x 30m sessions)<br>
+            2) spec functionality so it’s clear what exactly needs to be built and to know when you’re done<br>
+            3) plan implementation so you know how to build it (optionally learn the skills you’re missing yet, e.g. how to use an API, a library etc.)<br>
             4) set up the project so code can be tested and deployed immediately<br>
             (more on this process in a future post)
           </div>
@@ -73,7 +73,7 @@
       </tr>
     </tbody>
   </table>
-  
+
   <table class="table">
     <thead>
       <tr>
@@ -85,7 +85,7 @@
         <td class="left">Skill Level</td>
         <td>Advanced
           <div class="detail">
-            I enjoy singing a lot and I think that I have an alright voice, even though I'm obviously not as good as a professional singer. When I sing, I usually back myself by playing chords on the guitar or on the keyboard.
+            I enjoy singing a lot and I think that I have an alright voice, even though I’m obviously not as good as a professional singer. When I sing, I usually back myself by playing chords on the guitar or on the keyboard.
           </div>
         </td>
       </tr>
@@ -106,7 +106,7 @@
         <td class="left">30m fun</td>
         <td>practice a song
           <div class="detail">
-            Singing is fun when you love the song you're singing, it's as simple as that.<br>
+            Singing is fun when you love the song you’re singing, it’s as simple as that.<br>
             Preparation of singing practice:<br>
             1) get the song as stream/mp3/CD/record and listen to it over and over again<br>
             2) transpone the song into a key that you feel comfortable with singing in<br>
@@ -117,7 +117,7 @@
       </tr>
     </tbody>
   </table>
-  
+
   <table class="table">
     <thead>
       <tr>
@@ -129,7 +129,7 @@
         <td class="left">Skill Level</td>
         <td>Intermediate
           <div class="detail">
-            I start to enjoy simple conversations, yet I have a fairly limited vocabulary and verb conjugations keep driving me nuts. I understand quite a lot when people talk slowly using simple language. I've been practising spanish on a regular basis since September 2012.
+            I start to enjoy simple conversations, yet I have a fairly limited vocabulary and verb conjugations keep driving me nuts. I understand quite a lot when people talk slowly using simple language. I’ve been practising spanish on a regular basis since September 2012.
           </div>
         </td>
       </tr>
@@ -141,7 +141,7 @@
         <td class="left">Goal</td>
         <td>become fluent in conversational spanish
           <div class="detail">
-            what: I want to feel comfortable speaking with a native speaker about a random topic at a rate of speed at which a native speaker would normally speak. It's not my goal to perfect my written spanish.<br>why: I will spend some time in Spain again and I plan on travelling to South America next year.
+            what: I want to feel comfortable speaking with a native speaker about a random topic at a rate of speed at which a native speaker would normally speak. It’s not my goal to perfect my written spanish.<br>why: I will spend some time in Spain again and I plan on travelling to South America next year.
           </div>
         </td>
       </tr>
@@ -157,7 +157,7 @@
       </tr>
     </tbody>
   </table>
-  
+
   <table class="table">
     <thead>
       <tr>
@@ -184,7 +184,7 @@
       </tr>
     </tbody>
   </table>
-  
+
   <table class="table">
     <thead>
       <tr>
@@ -210,7 +210,7 @@
       </tr>
     </tbody>
   </table>
-  
+
   <table class="table">
     <thead>
       <tr>
@@ -234,61 +234,61 @@
         <td class="left">30m fun</td>
         <td>None
           <div class="detail">
-            Cycling isn't part of my working day routine as I prefer to go for longer rides on weekends.
+            Cycling isn’t part of my working day routine as I prefer to go for longer rides on weekends.
           </div></td>
       </tr>
     </tbody>
   </table>
-  
+
   <p>Other flow activities I would like to dedicate myself to in 2013 are playing guitar (soloing), surfing, building lego, speaking french and cooking.</p>
-  
+
   <p>My routine on a typical working day from Monday through Thursday looks like this:</p>
-  
+
   <ul class="text">
-    <li>I start my day at around 7:30am (6:30am during summertime) with coffee and some fun programming before I dedicate myself to client work. Knowing that I won't have to start my day with actual work lets me get out of bed a lot easier.</li>
-    <li>Around noon, I'm on my way to the office. I stop by at the gym and swim or do fitness exercises for a focused 30 minutes. Whenever the weather is nice (or when race day is coming closer), I go for a run at nearby Hasenheide and Tempelhofer Feld instead. This break by the way easily doubles my productivity and makes me feel good for the rest of the day. That's why I consider these 30 minutes of exercise the most important quality time of all.</li>
-    <li>When I'm on the metro or while waiting for it, I listen to my spanish podcasts for about 30 minutes a day.</li>
-    <li>After work, when I'm usually too tired for hard thinking, I relax by singing and playing guitar (usually for much more than just 30 minutes). Sometimes I watch movies with spanish subtitles or read out loud spanish texts.</li>
+    <li>I start my day at around 7:30am (6:30am during summertime) with coffee and some fun programming before I dedicate myself to client work. Knowing that I won’t have to start my day with actual work lets me get out of bed a lot easier.</li>
+    <li>Around noon, I’m on my way to the office. I stop by at the gym and swim or do fitness exercises for a focused 30 minutes. Whenever the weather is nice (or when race day is coming closer), I go for a run at nearby Hasenheide and Tempelhofer Feld instead. This break by the way easily doubles my productivity and makes me feel good for the rest of the day. That’s why I consider these 30 minutes of exercise the most important quality time of all.</li>
+    <li>When I’m on the metro or while waiting for it, I listen to my spanish podcasts for about 30 minutes a day.</li>
+    <li>After work, when I’m usually too tired for hard thinking, I relax by singing and playing guitar (usually for much more than just 30 minutes). Sometimes I watch movies with spanish subtitles or read out loud spanish texts.</li>
   </ul>
-  
-  <p>I use Fridays to finish what I've started during the week and to prepare my activities for next week. Fridays are also a good time to review my goals and to maintain my setups.</p>
-  
+
+  <p>I use Fridays to finish what I’ve started during the week and to prepare my activities for next week. Fridays are also a good time to review my goals and to maintain my setups.</p>
+
   <p>In a series of future posts, I’m going to cover each activity more in detail. Moreover, I will introduce flow activities and flow psychology, explain my process for preparing programming for fun and review how I planned and prepared for my first half-triathlon earlier this year.</p>
-  
+
   <p>
     <b>Who is this for?</b><br>
-    I'm building Flowra primarily for myself. I'm eager to grow my skill sets so I can enjoy more fun activities and keep a good quality of life despite the everyday battle for enough time and energy. If that's an objective you can identify with, then Flowra is for you too.
+    I’m building Flowra primarily for myself. I’m eager to grow my skill sets so I can enjoy more fun activities and keep a good quality of life despite the everyday battle for enough time and energy. If that’s an objective you can identify with, then Flowra is for you too.
   </p>
-  
+
   <p>
     <b>Is Flowra claiming of universal truth?</b><br>
-    Most ideas of Flowra draw inspiration from the book "<a href="http://en.wikipedia.org/wiki/Flow_(psychology)">Flow - The Psychology Of Optimal Experience</a>" (hence the name Flowra). The author's insights about flow experiences and their conditions are considered hard science. However, my attempts with Flowra to apply his model to concrete activities are yet experiments. And even though these practices have been working well for me, it doesn't necessarily mean they will work for others too.
+    Most ideas of Flowra draw inspiration from the book <a href="http://en.wikipedia.org/wiki/Flow_(psychology)"><i>Flow &mdash; The Psychology Of Optimal Experience</i></a> (hence the name Flowra). The author’s insights about flow experiences and their conditions are considered hard science. However, my attempts with Flowra to apply his model to concrete activities are yet experiments. And even though these practices have been working well for me, it doesn’t necessarily mean they will work for others too.
   </p>
-  
+
   <p>
     <b>Why would I need a system/software/app for my activities?</b><br>
-    You don't. In the end, what's more important than managing your activities is to actually do them. As I tried to outline in this post though, preparation of an activity is in fact important so you're able to enjoy the activity more and fit it into your routine. And preparing an activity is – to a varying degree – an effort that takes time. For instance
+    You don’t. In the end, what’s more important than managing your activities is to actually do them. As I tried to outline in this post though, preparation of an activity is in fact important so you’re able to enjoy the activity more and fit it into your routine. And preparing an activity is &mdash; to a varying degree &mdash; an effort that takes time. For instance
   </p>
-  
+
   <ul class="text">
-    <li>setting a specific and realistic goal is crucial, yet most people skip it because it's also quite difficult. A system should support the process of crafting and reviewing goals, maybe even re-using other people's goals.</li>
-    <li>maintaining my setup so I'm able to perform my activities at any time and any place. Where can I go for a run when I'm spending time abroad? Where can I get a guitar for a few days and where can I practice? I want a system that lets me manage and share my setups easily.</li>
-    <li>preparing next week's iteration of my software pet project, getting the notes for this piano piece I want to learn, finding new spanish movies that interest me etc.</li>
+    <li>setting a specific and realistic goal is crucial, yet most people skip it because it’s also quite difficult. A system should support the process of crafting and reviewing goals, maybe even re-using other people’s goals.</li>
+    <li>maintaining my setup so I’m able to perform my activities at any time and any place. Where can I go for a run when I’m spending time abroad? Where can I get a guitar for a few days and where can I practice? I want a system that lets me manage and share my setups easily.</li>
+    <li>preparing next week’s iteration of my software pet project, getting the notes for this piano piece I want to learn, finding new spanish movies that interest me etc.</li>
   </ul>
-  
+
   <p>
     At some point, Flowra should provide me with simple functionality to get this preparation work done faster.
   </p>
-  
+
   <p>
     <b>What Flowra is not about</b><br>
-    Flowra isn't about quick productivity hacks that will make your life better in ten easy steps. Nor does it aim to become a learning platform for programming, guitar playing or speaking foreign languages. Its intention is rather to help you prepare yourself for learning and enjoying these activities.
+    Flowra isn’t about quick productivity hacks that will make your life better in ten easy steps. Nor does it aim to become a learning platform for programming, guitar playing or speaking foreign languages. Its intention is rather to help you prepare yourself for learning and enjoying these activities.
   </p>
-  
-  <div style="display:none;" class="facebook clearfix">  
+
+  <div style="display:none;" class="facebook clearfix">
     <iframe class="left"  src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fflowra.org&amp;width=210&amp;height=85&amp;show_faces=true&amp;colorscheme=light&amp;stream=false&amp;border_color&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:210px; height:85px;" allowTransparency="true"></iframe>
-  
-    <h3 class="right">...stay in the loop</h3>
+
+    <h3 class="right">&hellip; stay in the loop</h3>
   </div>
-  
+
 </div>
