"lets me" sounds like a germanicism; try "helps" instead

--- a/intro.html
+++ b/intro.html
@@ -272,7 +272,7 @@
 
   <ul class="text">
     <li>setting a specific and realistic goal is crucial, yet most people skip it because it’s also quite difficult. A system should support the process of crafting and reviewing goals, maybe even re-using other people’s goals.</li>
-    <li>maintaining my setup so I’m able to perform my activities at any time and any place. Where can I go for a run when I’m spending time abroad? Where can I get a guitar for a few days and where can I practice? I want a system that lets me manage and share my setups easily.</li>
+    <li>maintaining my setup so I’m able to perform my activities at any time and any place. Where can I go for a run when I’m spending time abroad? Where can I get a guitar for a few days and where can I practice? I want a system that helps to manage and share my setups easily.</li>
     <li>preparing next week’s iteration of my software pet project, getting the notes for this piano piece I want to learn, finding new spanish movies that interest me etc.</li>
   </ul>
 
