--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="shortcut icon" href="./assets/favicon.ico" type="image/vnd.microsoft.icon" />
+  <title>fun with flow activities | flowra.org</title>
+
+  <link rel="stylesheet" type="text/css" href="./assets/home.css">
+  <link rel="stylesheet" type="text/css" href="./assets/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="./assets/twitter_bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="./assets/flowra.css">
+
+  <!-- Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Merriweather:300,700|Varela&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Norican' rel='stylesheet' type='text/css'>
+</head>
+
+<body class="html front page-home" >
+    <div class="page container-fluid">
+
 <div class="header"></div>
 
 <h3 class="teaser">
@@ -285,7 +307,7 @@
     Flowra isn&#8217;t about quick productivity hacks that will make your life better in ten easy steps. Nor does it aim to become a learning platform for programming, guitar playing or speaking foreign languages. Its intention is rather to help you prepare yourself for learning and enjoying these activities.
   </p>
 
-  <div class="facebook">  
+  <div class="facebook">
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -300,10 +322,35 @@
 
       <h3 class="right">&hellip; stay in the loop</h3>
     </div>
-  
+
     <div class="comment">
       <div class="fb-comments" data-href="http://www.flowra.org" data-width="600" data-num-posts="5"></div>
     </div>
   </div>
 
 </div>
+
+<div class="row-fluid">
+    <footer id="footer" class="footer">
+      &copy; 2012 Alex Wilde <a href="http://twitter.com/#!/alexthewilde">@alexthewilde</a>
+    </footer>
+  </div>
+
+</div> <!-- /container -->
+
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-3732689-5']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+  </script>
+</body>
+</html>
+
